# magnum-bootstrap

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  build.gradle  build.sh  local.properties
data/: voronoi_1.txt  voronoi_12.txt  voronoi_2.txt  voronoi_9.txt
data/textures/: textures.conf
src/: Application.cpp  Application.h  CMakeLists.txt  DirectoryWatcher.cpp  DirectoryWatcher.h  GuiGfxPlane.cpp  GuiGfxPlane.h  ImageManager.cpp  ImageManager.h  MyApplication.cpp  MyApplication.h  Ui.cpp  Ui.h  Voronoi.hpp  VoronoiVisualizer.cpp  main.cpp  voronoi_visual_utils.hpp
